2020_2 Calculo Computacional/Aulas/2020_08_20 Operações Basica Python/2020_08_20 Python Operações basicas.txt






































































>>> a=4
>>> type(a)
<class 'int'>
>>> b=2
>>> type(b)
<class 'int'>
>>> c=a/b
>>> type(c)
<class 'float'>
>>> d=3
>>> a
4
>>> if(a>2):
... print("ok")
  File "<stdin>", line 2
    print("ok")
    ^
IndentationError: expected an indented block
>>> if(a>2):
...  print("ok")
...
ok
>>> a=6
>>> b=3
>>> soma=a=b
>>> soma
3
>>> soma=a+b
>>> soma
6
>>> a=6
>>> b=3
>>> soma=a+b
>>> soma
9
>>> subtração=a-b
>>> subtração
3
>>> multiplicação =a*b
>>> multiplicação
18
>>> divisão=a/b
>>> divisão
2.0
>>> print ("vamos mostrar todos resultados")
vamos mostrar todos resultados
>>> print ("a=",a)
a= 6
>>> print ("b=",b)
b= 3
>>> print ""b=",b)
  File "<stdin>", line 1
    print ""b=",b)
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(""b=",b))?
>>> print ("b=",b)
b= 3
>>> print ("a+b=",soma)
a+b= 9
>>> print ("a-b=", subtração)
a-b= 3
>>> print ("a*b=", multiplicação)
a*b= 18
>>> print ("a/b=", divisão)
a/b= 2.0
>>> print('n'*50)
nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn
>>> print('\n'*50)



















































>>> a1=6,5
>>> b1=2,5
>>> type(a1)
<class 'tuple'>
>>> type(b1)
<class 'tuple'>
>>> a1=6.5
>>> b1=2.5
>>> soma=a1+b1
>>> subtração=a1-b1
>>> multiplicação=a1*b1
>>> print("a1+b1=", soma)
a1+b1= 9.0
>>> print("a1-b1=", subtração)
a1-b1= 4.0
>>> print("a1*b1=", multiplicação)
a1*b1= 16.25
>>> print("a1/b1=", divisão)
a1/b1= 2.0
>>> print('\n'*50)



















































>>> a=5
>>> a=25
>>> b=2
>>> b=1/2
>>> c=(a**b)
>>> c
5.0
>>> a=27
>>> c
5.0
>>> c=a**b
>>> c
5.196152422706632
>>> b=1/3
>>> c=(a**b)
>>> c
3.0
>>>
>>>
>>>
>>>
>>> a=16
>>> b=1/4
>>> c=(a**b)
>>> c
2.0
>>>
>>>
>>> a =2
>>> potencia_ao_quadrado = a ** 2
>>> potencia_ao_cubo = a ** 3
>>> potencia_a_quarta = a ** 4
>>>
>>> print("a ** 2 = ". potencia_ao_quadrado)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'str' object has no attribute 'potencia_ao_quadrado'
>>> print("a ** 2 = ", potencia_ao_quadrado)
a ** 2 =  4
>>> print("a ** 3 = ", potencia_ao_cubo)
a ** 3 =  8
>>> print("a ** 4 = ", potencia_a_quarta)
a ** 4 =  16
>>>
>>>
>>>
>>> c = pow(a,2)
>>> c
4
>>> print('\n'*10)











>>> from math import pow
>>> c = 4
>>> d = 5
>>> c_elevado_ao_quadrado = pow(c,2)
>>> c_elevado_ao_cubo = pow(c,3)
>>> c_elevado_a_quarta = pow(c,4)
>>> c_elevado_a_d = pow(c,d)
>>> print("c elevado ao quadrado=", c_elevado_ao_quadrado)
c elevado ao quadrado= 16.0
>>> print("c elevado ao cubo=", c_elevado_ao_cubo)
c elevado ao cubo= 64.0
>>> print("c elevado a quarta=", c_elevado_a_quarta)
c elevado a quarta= 256.0
>>> print("c elevado a d=", c_elevado_a_d)
c elevado a d= 1024.0
>>>
>>>
>>> x = 512
>>> raiz_quadrada_de_x = pow(x,1/2)
>>> raiz_quadrada_de_x
22.627416997969522
>>>
>>> raiz_cubica_de_x = pow(x,1/3)
>>> raiz_quarta_de_x = pow(x,1/4)
>>>
>>> raiz_cubica_de_x
7.999999999999999
>>>
>>> raiz_quarta_de_x
4.756828460010884
>>>